tests/baselines/reference/propertyNamesOfReservedWords.errors.txt
propertyNamesOfReservedWords.ts(67,10): error TS2454: Variable 'c' is used before being assigned.
propertyNamesOfReservedWords.ts(68,10): error TS2454: Variable 'c' is used before being assigned.
propertyNamesOfReservedWords.ts(137,10): error TS2454: Variable 'i' is used before being assigned.
propertyNamesOfReservedWords.ts(138,10): error TS2454: Variable 'i' is used before being assigned.
propertyNamesOfReservedWords.ts(206,10): error TS2454: Variable 'a' is used before being assigned.
propertyNamesOfReservedWords.ts(207,10): error TS2454: Variable 'a' is used before being assigned.


==== propertyNamesOfReservedWords.ts (6 errors) ====
    class C {
        abstract;
        as;
        boolean;
        break;
        byte;
        case;
        catch;
        char;
        class;
        continue;
        const;
        debugger;
        default;
        delete;
        do;
        double;
        else;
        enum;
        export;
        extends;
        false;
        final;
        finally;
        float;
        for;
        function;
        goto;
        if;
        implements;
        import;
        in;
        instanceof;
        int;
        interface;
        is;
        long;
        namespace;
        native;
        new;
        null;
        package;
        private;
        protected;
        public;
        return;
        short;
        static;
        super;
        switch;
        synchronized;
        this;
        throw;
        throws;
        transient;
        true;
        try;
        typeof;
        use;
        var;
        void;
        volatile;
        while;
        with;
    }
    var c: C;
    var r1 = c.abstract;
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r2 = c.as;
             ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    interface I {
        abstract;
        as;
        boolean;
        break;
        byte;
        case;
        catch;
        char;
        class;
        continue;
        const;
        debugger;
        default;
        delete;
        do;
        double;
        else;
        enum;
        export;
        extends;
        false;
        final;
        finally;
        float;
        for;
        function;
        goto;
        if;
        implements;
        import;
        in;
        instanceof;
        int;
        interface;
        is;
        long;
        namespace;
        native;
        new;
        null;
        package;
        private;
        protected;
        public;
        return;
        short;
        static;
        super;
        switch;
        synchronized;
        this;
        throw;
        throws;
        transient;
        true;
        try;
        typeof;
        use;
        var;
        void;
        volatile;
        while;
        with;
    }
    
    var i: I;
    var r3 = i.abstract;
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r4 = i.as;
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var a: {
        abstract;
        as;
        boolean;
        break;
        byte;
        case;
        catch;
        char;
        class;
        continue;
        const;
        debugger;
        default;
        delete;
        do;
        double;
        else;
        enum;
        export;
        extends;
        false;
        final;
        finally;
        float;
        for;
        function;
        goto;
        if;
        implements;
        import;
        in;
        instanceof;
        int;
        interface;
        is;
        long;
        namespace;
        native;
        new;
        null;
        package;
        private;
        protected;
        public;
        return;
        short;
        static;
        super;
        switch;
        synchronized;
        this;
        throw;
        throws;
        transient;
        true;
        try;
        typeof;
        use;
        var;
        void;
        volatile;
        while;
        with;
    }
    
    var r5 = a.abstract;
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r6 = a.as;
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    enum E {
        abstract,
        as,
        boolean,
        break,
        byte,
        case,
        catch,
        char,
        class,
        continue,
        const,
        debugger,
        default,
        delete,
        do,
        double,
        else,
        enum,
        export,
        extends,
        false,
        final,
        finally,
        float,
        for,
        function,
        goto,
        if,
        implements,
        import,
        in,
        instanceof,
        int,
        interface,
        is,
        long,
        namespace,
        native,
        new,
        null,
        package,
        private,
        protected,
        public,
        return,
        short,
        static,
        super,
        switch,
        synchronized,
        this,
        throw,
        throws,
        transient,
        true,
        try,
        typeof,
        use,
        var,
        void,
        volatile,
        while,
        with,
    }
    
    var r7 = E.abstract;
    var r8 = E.as;